# qbdiff

./: .clang-format  .cspell.json  .gitattributes  .gitignore  Dockerfile  Dockerfile.distroless  Makefile.am  README.md  configure.ac  qbdiff.pc.in
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
benchmark/: modbytes.c  run.sh  setup.sh
include/: blake3.h  blake3_impl.h  libqbdiff.h  libqbdiff_private.h  libsais.h  libsais64.h
man/: qbdiff.1.in  qbpatch.1.in
src/: blake3.c  blake3_dispatch.c  blake3_portable.c  libqbdiff.c  libsais.c  libsais64.c  qbdiff.c  qbpatch.c
